# bee-rs

./: .gitignore  .travis.yml  Cargo.toml  Cross.toml  README.md  build.sh  cross-build.sh  install.vbs  test.sh  test.sql  uninstall.vbs
.travis/: install.sh
bin 2/: bee.d  hive.d
cli/: Cargo.toml  README.md
cli/src/: main.rs
client/: Cargo.toml
client-jdbc/: .project  README.md  build.sh  pom.xml  project.properties  test.sh
client-jdbc/src/main/java/com/enmotech/nirvana/bee/connector/: AgentDatasource.java  BeeConnection.java  BeeDatabaseMetaData.java  BeeDatasource.java  BeeDriver.java  BeeException.java  BeeResultMetaData.java  BeeResultSet.java  BeeStatement.java  Bytes.java  Callback.java  ClientInfo.java  ColumnInfo.java  ConnectReq.java  ConnectResp.java  DataType.java  Decoder.java  Encoder.java  Future.java  NotConnectedException.java  NotSupportException.java  Packet.java  PacketDecoder.java  PacketEncoder.java  PacketHandler.java  PingReq.java  PingResp.java  Promise.java  PromisePacketHandler.java  Protocol.java  RemoteDatasource.java  Response.java  ResponsePacketHandler.java  ResultRow.java  StatementReq.java  StatementResp.java  Transport.java  Value.java
client-jdbc/src/main/java/com/enmotech/nirvana/bee/connector/codec/: BeeException.java  Bytes.java  ConnectReq.java  ConnectResp.java  Decoder.java  Encoder.java  NotConnectedException.java  NotSupportException.java  Packet.java  PacketDecoder.java  PacketEncoder.java  PacketHandler.java  PingReq.java  PingResp.java  PromisePacketHandler.java  Protocol.java  StatementReq.java  StatementResp.java
client-jdbc/src/main/java/com/enmotech/nirvana/bee/connector/promise/: Callback.java  Future.java  Promise.java
client-jdbc/src/test/java/com/enmotech/nirvana/bee/: ConnectionFactory.java
client-jdbc/src/test/java/com/enmotech/nirvana/bee/connector/: ClientInfoTest.java  ConnectorTest.java  ConnectorUrl.java  StatementTest.java
client/src/: main.rs
codec/: Cargo.toml  README.md
codec/src/: connect.rs  lib.rs  statement.rs
codegen/: Cargo.toml
codegen/src/: lib.rs  to_data.rs  to_ds.rs  to_function.rs
core/: Cargo.toml
core/src/: args.rs  columns.rs  configure.rs  error.rs  instance.rs  lib.rs  macros.rs  register.rs  request.rs  row.rs  state.rs  statement.rs
core/src/connect/: mod.rs
core/src/connect/lua/: convert.rs  mod.rs
core/src/connect/sqlite/: convert.rs  mod.rs  sql_tab.rs
core/src/datasource/: mod.rs
core/src/datasource/agent/: cpu_usage.rs  filesystem.rs  host_basic.rs  host_mem.rs  host_swap.rs  mkdir.rs  mod.rs  os_info.rs  read_file.rs  shell.rs  write_file.rs
core/src/datasource/debug/: mod.rs  shell.rs
core/src/datasource/remote/: mkdir.rs  mod.rs  read_file.rs  shell.rs  write_file.rs
core/src/funcs/: mod.rs  split_csv.rs  split_space.rs
core/tests/: agent_lua.rs  agent_sqlite.rs  common.rs  remote_lua.rs  remote_sqlite.rs
corelib/: .tarpaulin.toml  Cargo.toml  README.md
corelib/example/: run_lua.rs  run_sqlite.rs
corelib/src/: args.rs  columns.rs  configure.rs  connect.rs  datasource.rs  datatype.rs  driver.rs  error.rs  instance.rs  lib.rs  macros.rs  register.rs  request.rs  row.rs  session.rs  state.rs  statement.rs  value.rs
corelib/src/agent/: host_cpu.rs  host_info.rs  host_mem.rs  mod.rs
corelib/src/bash/: local.rs  mod.rs  remote.rs
corelib/src/common/: functions.rs  mod.rs
corelib/src/connect/: mod.rs
corelib/src/connect/lua/: convert.rs  mod.rs
corelib/src/connect/sqlite/: convert.rs  mod.rs  sql_tab.rs
corelib/src/datasource/: mod.rs
corelib/src/datasource/agent/: bash.rs  cpu_usage.rs  filesystem.rs  host_basic.rs  host_mem.rs  host_swap.rs  mkdir.rs  mod.rs  os_info.rs  read.rs  read_file.rs  shell.rs  upload.rs  write_file.rs
corelib/src/datasource/debug/: mod.rs  shell.rs
corelib/src/datasource/remote/: bash.rs  mkdir.rs  mod.rs  read.rs  read_file.rs  shell.rs  upload.rs  write_file.rs
corelib/src/disk/: mod.rs
corelib/src/disk/agent/: mkdir.rs  mod.rs  read.rs  upload.rs
corelib/src/disk/remote/: mkdir.rs  mod.rs  read.rs  upload.rs
corelib/src/extends/: bssh.rs  cmd.rs  mod.rs
corelib/src/extends/agent/: cpu_usage.rs  filesystem_usage.rs  memory_usage.rs  mod.rs  os_basic.rs  os_info.rs  swap_usage.rs
corelib/src/extends/sql/: convert.rs  functions.rs  mod.rs  sql_tab.rs
corelib/src/funcs/: func_get.rs  mod.rs  split_csv.rs  split_space.rs  split_timespan.rs
corelib/src/sqlite/: convert.rs  mod.rs  sql_tab.rs
corelib/tests/: agent.rs  agent_lua.rs  agent_sqlite.rs  common.rs  remote.rs  remote_lua.rs  remote_sqlite.rs
cross/: setup.sh
cross/x86_64-unknown-linux-musl/: Dockerfile
server/: Cargo.toml  README.md
server/src/: install.rs  lib.rs  main.rs  uninstall.rs
server/src/agent/: filesystem.rs  mod.rs
server/src/bash/: local.rs  mod.rs  remote.rs
server/src/disk/: mod.rs
service/: Cargo.toml
tasks/linux/: cpu_usage.sql  iops_usage.sql  memory_usage.sql  ogg_sync_lag.sql
