[package]
name = "bee"
version = "0.1.0"
authors = ["xiao.huang@enmotech.com <xiao.huang@enmotech.com>"]
edition = "2018"

[dependencies]
bee-codec           = {version = "0.1.0", path = "../codec"}
tokio               = {version = "*", features = ["fs","io-std","macros","net","sync"]}
prettytable-rs      = "^0.8"
hostname            = "^0.3"
futures             = "0.3.0"

[target."cfg(unix)".dependencies]
redox_liner         = {git = "https://gitlab.redox-os.org/redox-os/liner.git"}