[package]
name = "bee-codec"
version = "0.1.0"
authors = ["xiao.huang@enmotech.com <xiao.huang@enmotech.com>"]
edition = "2018"

[dependencies]
bee-core            = {version = "0.1.0", path = "../corelib"}
bee-codegen         = {version = "0.1.0", path = "../codegen"}
bytes               = {version = "0.5.0"}
tokio-util          = {version = "*", features = ["codec"]}
log                 = {version = "*"}

[dev-dependencies]
env_logger = "*"