[package]
name = "bee-core"
version = "0.1.0"
authors = ["xiao.huang@enmotech.com <xiao.huang@enmotech.com>"]
edition = "2018"

[dependencies]
url                 = {version = "*"}
parking_lot         = {version = "0.11"}
smol                = {version = "0.3"}
async-std           = {version = "*"}
log                 = {version = "*"}
state               = {version = "0.4"}
bincode             = {version = "*"}
bee-codegen         = {version = "0.1.0", path = "../codegen"}

ssh                 = {optional = true, git = "https://github.com/sMitea/ssh.git"}
heim                = {optional = true, git = "https://github.com/sMitea/heim.git", features = ["host","memory","cpu","disk","runtime-async-std"]}
timeout-readwrite   = {optional = true, version = "*"}
humantime           = {optional = true, version = "*"}
num_cpus            = {optional = true, version = "*"}
libc                = {optional = true, version = "0.2"}

rlua                = {optional = true, version = "*"}
rusqlite            = {optional = true, git = "https://github.com/rusqlite/rusqlite.git", features = ["blob","vtab","functions","column_decltype","bundled"]}

[features]
default     = [
    "agent",
    "sqlite",
]

remote      =   ["ssh","libc"]
agent       =   ["heim","humantime","num_cpus","timeout-readwrite"]
sqlite      =   ["rusqlite"]
lua         =   ["rlua"]

[dev-dependencies]
env_logger = "*"