[package]
name = "server"
version = "0.1.0"
authors = ["xiao.huang@enmotech.com <xiao.huang@enmotech.com>"]
edition = "2018"

[dependencies]
bee-core            = {version = "0.1.0", path = "../corelib"}
bee-codegen         = {version = "0.1.0", path = "../codegen"}
csv                 = {version = "*"}
encoding            = {version = "*"}
bincode             = {version = "*"}

ssh                 = {optional = true, git = "https://github.com/sMitea/ssh.git"}
heim                = {optional = true, git = "https://github.com/sMitea/heim.git", features = ["host","memory","cpu","disk","runtime-async-std"]}
humantime           = {optional = true, version = "*"}
num_cpus            = {optional = true, version = "*"}

[features]
default     = [
    "agent",
    "remote",
]

remote      =   ["ssh"]
agent       =   ["heim","humantime","num_cpus"]