[package]
name = "hive"
version = "0.1.0"
description = "A fast and small tool for monitor tool."
authors = ["xiao.huang@enmotech.com <xiao.huang@enmotech.com>"]
edition = "2018"

[dependencies]
bee-core            = {version = "0.1.0", path = "../corelib" , features = ["agent", "sqlite", "remote", "lua"]}
bee-codec           = {version = "0.1.0", path = "../codec"}
log                 = "*"
chrono              = "*"
fern                = {version = "0.5"}
futures             = "0.3.0"
structopt           = "*"
colored             = "1.9"
tokio               = {version = "*", features = ["fs","io-std","macros","net","sync"]}

[target.'cfg(unix)'.dependencies]
daemonize           = "*"
libc                = "*"

[target.'cfg(windows)'.dependencies]
windows-service     = "*"

[[bin]]
path = "src/main.rs"
name = "hive"